--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
